--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
   "icon": "https://pinticebtw.github.io/cutscene-videos/icon.png",
   "version": "1.0.0",
   "type": "plugin",
-  "manifestVersion": 1
+  "manifest_version": 1
 }
