tua mensagem aqui

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 1,
-  "name": "CUTSCENE VIEWER",
+  "name": "Cutscene Viewer",
   "version": "1.0.0",
   "description": "Plugin para mostrar vídeos cinematográficos com som a todos os jogadores.",
   "author": "pintice",
