--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,11 @@
   "homepage_url": "https://pinticebtw.github.io/CUTSCENE-VIEWER/",
   "background_url": "https://pinticebtw.github.io/CUTSCENE-VIEWER/background.js",
   "permissions": [],
-  "icon": "icon.png"
+  "icon": "icon.png",
+  "action": {
+    "type": "sidebar",
+    "title": "Cutscene Viewer",
+    "icon": "icon.png",
+    "url": "index.html"
+  }
 }
