Mudar ação para aparecer na room

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "permissions": [],
   "icon": "icon.png",
   "action": {
-    "type": "sidebar",
+    "type": "room",
     "title": "Cutscene Viewer",
     "icon": "icon.png",
     "url": "index.html"
