Corrigir manifest final e garantir visibilidade na barra

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   "description": "Extensão para mostrar vídeos cinematográficos com som aos jogadores.",
   "author": "pintice",
   "icon": "icon.png",
+  "type": "plugin",     
   "action": {
     "title": "Cutscene Viewer",
     "icon": "icon.png",
