Adicionar popover ao manifest

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   "action": {
     "title": "Cutscene Viewer",
     "icon": "icon.png",
-    "entry": "index.html"
+    "entry": "index.html",
+    "popover": "index.html"
   }
 }
