--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,10 @@
   "icon": "https://pinticebtw.github.io/CUTSCENE-VIEWER/icon.png",
   "action": {
     "type": "overlay",
-    "title": "Cutscene Plugin",
-    "url": "https://pinticebtw.github.io/CUTSCENE-VIEWER/index.html",
-    "icon": "https://pinticebtw.github.io/CUTSCENE-VIEWER/icon.png"
+    "popover": {
+      "title": "Cutscene Plugin",
+      "url": "https://pinticebtw.github.io/CUTSCENE-VIEWER/index.html",
+      "icon": "https://pinticebtw.github.io/CUTSCENE-VIEWER/icon.png"
+    }
   }
 }
