--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
-  "manifest_version": 1,
   "name": "Cutscene Plugin",
   "version": "1.0.0",
-  "description": "Extensão de visualização de cutscenes para RPG.",
+  "manifest_version": 1,
   "author": "pintice",
   "homepage_url": "https://pinticebtw.github.io/CUTSCENE-VIEWER/",
   "icon": "/icon.png",
+  "description": "Extensão de visualização de cutscenes para RPG.",
   "action": {
     "title": "Cutscene Viewer",
     "icon": "/icon.png",
     "popover": "/index.html",
-    "width": 500,
-    "height": 400
-  }
+    "height": 400,
+    "width": 500
+  },
+  "background_url": "/index.html"
 }
