--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
   "icon": "/icon.png",
   "action": {
     "title": "Cutscene Viewer",
-    "icon": "/icon.png",
-    "popover": "/index.html",
+    "icon": "https://pinticebtw.github.io/CUTSCENE-VIEWER/icon.png",
+    "popover": "https://pinticebtw.github.io/CUTSCENE-VIEWER/index.html",
     "height": 700,
     "width": 500
   },
